remove dependency on preview java 15 (depends on appveyor support); refactor; update build tools